Fixed padding issue on smaller devices

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     .content {
         padding: 20px;
         line-height: 2;
-        width: 100%;
+        width: 90%;
     }
 }
 
